# Phenobottle

./: .gitignore  DataVisualiser.py  LICENSE  LICENSE (Hardware)  LICENSE (Software)  Phenobottle Circuit Board BOM.csv  Phenobottle Hardware BOM.xlsx  Phenobottle Raspberry Pi.py  Phenobottle_RaspberryPi.py  Phenobottle_Teensy.ino  README.md  requirements.txt
.codelite/: refactoring.db
3D Models/STEP Files/: Phenobottle Magnetic Motor Attachment.step  Phenobottle Main Frame.step
3D Models/STL Files/: Phenobottle Main Frame.stl
Circuit Board/Main Teensy Circuit Board/Phenobottle_Circuit_Gerber/: Gerber_Drill_NPTH.DRL  Gerber_TopPasteMaskLayer.GTP
Documentation/Firmware/html/: annotated.html  class_lights-members.html  class_lights.html  class_parser-members.html  class_parser.html  class_temperature-members.html  class_temperature.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  lights_8h_source.html  (+4 more)
Electronics/AdditionalPartLibraries/: 1655--3DModel-STEP-56544.STEP  B2B-XH-A(LF)(SN)--3DModel-STEP-56544.STEP  CONN_1-1337543-0.kicad_mod  CUI_PJ-002B.kicad_mod  DPAK228P994X240_3N.kicad_mod  GCT_USB4151-GF-C_REVA.kicad_mod  JST_B2B-XH-A(LF)(SN).kicad_mod  LM2576SX-5.0_NOPB.step  RGB-5050-LED.kicad_mod  Teensy41(Edited).kicad_mod  USB4151-GF-C_REVA.step  VREG_TPS79625KTTR.kicad_mod  c-1-1337543-0-f-3d.stp  logo.kicad_mod  open_jip_logo.kicad_mod  open_jip_logo_small.kicad_mod
Electronics/LED Array/: LED Array.kicad_pcb  LED Array.kicad_pcb-bak  LED Array.net  LED Array.pro  LED Array.sch  LED Array.sch-bak  LED Array.step  LED Arrayv2.kicad_pcb  LED Arrayv2.kicad_pcb-bak  LED Arrayv2.net  LED Arrayv2.pro  fp-info-cache  fp-lib-table  sym-lib-table
Firmware/TeenyMotorControl/: Doxyfile  TeenyMotorControl.ino  lights.cpp  lights.h  parser.cpp  parser.h
Phenobottle 3D Models/STEP Files/: Phenobottle Culture Flask Cap.step  Phenobottle Lid.step  Phenobottle Main Frame.step
Phenobottle 3D Models/STL Files/: Phenobottle Culture Flask Cap.stl  Phenobottle Lid.stl
Phenobottle Circuit Board/Phenobottle_Circuit_Gerber/: Gerber_BottomLayer.GBL  Gerber_BottomSolderMaskLayer.GBS  Gerber_Drill_PTH.DRL  Gerber_TopLayer.GTL  Gerber_TopSolderMaskLayer.GTS
Phenobottle Circuit Board/RGB Control Circuit/: RGB Control BOM.csv
PhenobottleML/: PhenobottleML.ino  settings.h
PhenobottleUI/: Makefile
PhenobottleUI/.codelite/: PhenobottleUI.session  compilation.db  refactoring.db
Phenobottle_Teensy/: Phenobottle_Teensy.ino
Teensy Controls/PhenobottleML/: temperatureprobe.h
Teensy Controls/TeenyMotorControl/: TeenyMotorControl.ino
User Interface/: PhenobottleUI.workspace
User Interface/.codelite/: PhenobottleUI.workspace.someone
User Interface/Desktop Application/: Makefile
User Interface/PhenobottleUI/: CMakeCache.txt  cmake_install.cmake
User Interface/Web Application/: index.html  style.css
User Interface/web_application/: .eslintcache  package-lock.json  package.json
User Interface/web_application/backend/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  notes.txt
User Interface/web_application/backend/src/: main.cpp
User Interface/web_application/server/: .index.js.swp  CMakeLists.txt  db.js  index.js  notes.cpp  package-lock.json  template.json
User Interface/web_application/server/client_simple/: client_simple.js  package-lock.json
User Interface/web_application/server/include/: .connection.h.swp  .crypto.hpp.swp  connection.h  main.h  serial.h  server.h
User Interface/web_application/server/js_database_requests/: package.json
User Interface/web_application/server/lib/Simple-WebSocket-Server/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  client_ws.hpp  server_ws.hpp  ws_examples.cpp  wss_examples.cpp
User Interface/web_application/server/lib/Simple-WebSocket-Server/tests/: CMakeLists.txt  crypto_test.cpp  io_test.cpp  parse_test.cpp
User Interface/web_application/server/src/: .connection.cpp.swp  .main.cpp.swp  connection.cpp  main.cpp  serial.cpp  server.cpp
UserInterface/: README.md
UserInterface/DesktopApplication/: CMakeLists.txt
UserInterface/DesktopApplication/src/: csvreader.cpp  phframe.cpp
UserInterface/phenobottle_web_ui/: Dockerfile  package-lock.json  package.json
UserInterface/phenobottleui/: package.json
UserInterface/web_application/: generateid  idgenerator.cpp
UserInterface/web_application/server/: .CMakeLists.txt.swp  CMakeLists.txt  Doxyfile  notes.txt  tags  template.json
UserInterface/web_application/server/CPM_modules/: Findnlohmann_json.cmake
UserInterface/web_application/server/cmake/: CPM_0.28.4.cmake
UserInterface/web_application/server/include/: communications.h  connection.h  constants.h  crypto.hpp  main.h  parsejson.h  serial.h  server.h  test_data.hpp
UserInterface/web_application/server/js_database_requests/: database.sql  index.js
UserInterface/web_application/server/src/: .serial.cpp.swp  communications.cpp  connection.cpp  main.cpp  parsejson.cpp  serial.cpp  server.cpp
bill_of_materials/: Phenobottle Circuit Board BOM.csv
bom/: hardware.csv
electronics/phenobottle/: COMPUTE.kicad_sch  can.kicad_sch  debug.kicad_sch  flu_detect.kicad_sch  flu_excite.kicad_sch  fp-lib-table  gpio.kicad_sch  led_driver.kicad_sch  motor_control.kicad_sch  phenobottle.kicad_pro  phenobottle.kicad_sch  piezo.kicad_sch  power.kicad_sch  sym-lib-table  ~phenobottle.kicad_sch.lck
firmware/main/: motors.cpp  motors.h  parser.cpp  parser.h  platformio.ini  temperature.h
models/STL Files/: Phenobottle Magnetic Motor Attachment.stl
phenobottle/: .serialcoms.py.swp  config.py  config.yaml  json_examples.txt  log.py  microcontroller.py  parse.py  serialcoms.py  telemetry.py
phenobottle-api/: app.js  package-lock.json  package.json
phenobottle-ui/: package-lock.json  package.json
phenobottle-ui/src/: App.css  App.js
phenobottle/config/: config.yaml
phenobottle/mqtt/: communications.py
phenobottleui/: package-lock.json
software/: config.yaml  setup.py
software/mqtt/: __init__.py  communications.py  coms.py
(+284 files in other folders)
